Test/Files/Parser/FullParserTestCases/Bad/FullTests/Out/testcase97-03.out

Parse error on line 1:
class main extends main {
------^
Expecting 'ID'